[gd_scene load_steps=8 format=3 uid="uid://cn37pflrtcjmo"]

[ext_resource type="Script" uid="uid://cse33spg8yjb5" path="res://main-menu/settingsscene/script/ingame_settings.gd" id="1_7x601"]
[ext_resource type="Theme" uid="uid://cqmt4obqoeysj" path="res://main-menu/UI/panel_theme.tres" id="2_ee7ve"]
[ext_resource type="Texture2D" uid="uid://rt8qs3bs62m3" path="res://main-menu/UI/mainmenubackground.png" id="3_fpiat"]
[ext_resource type="FontFile" uid="uid://cq850sbmqa2uk" path="res://main-menu/fonts/Jersey_25/Jersey25-Regular.ttf" id="4_3sgqg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ikcl0"]
bg_color = Color(0.431588, 0.567044, 0.736408, 0.941176)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x2hje"]
bg_color = Color(0.423529, 0.552941, 0.709804, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_je45u"]
bg_color = Color(0.423529, 0.552941, 0.709804, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7x601")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -577.5
offset_top = -325.0
offset_right = 577.5
offset_bottom = 325.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_ee7ve")
theme_override_styles/panel = SubResource("StyleBoxFlat_ikcl0")
metadata/_edit_use_anchors_ = true

[node name="Mainmenubackground" type="Sprite2D" parent="Panel"]
position = Vector2(579, 327.5)
scale = Vector2(0.601562, 0.606481)
texture = ExtResource("3_fpiat")

[node name="audio_button" type="Button" parent="."]
layout_mode = 0
offset_left = 269.0
offset_top = 48.0
offset_right = 464.0
offset_bottom = 148.0
theme_override_fonts/font = ExtResource("4_3sgqg")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_x2hje")
text = "Audio"

[node name="graphics_button" type="Button" parent="."]
layout_mode = 0
offset_left = 464.0
offset_top = 48.0
offset_right = 688.0
offset_bottom = 148.0
theme_override_fonts/font = ExtResource("4_3sgqg")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_x2hje")
text = "Graphics"

[node name="ingame_button" type="Button" parent="."]
layout_mode = 0
offset_left = 688.0
offset_top = 48.0
offset_right = 888.0
offset_bottom = 148.0
theme_override_fonts/font = ExtResource("4_3sgqg")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_x2hje")
text = "Ingame"

[node name="back_button" type="Button" parent="."]
layout_mode = 0
offset_left = -20.0
offset_top = 577.0
offset_right = 129.0
offset_bottom = 653.0
theme_override_styles/normal = SubResource("StyleBoxFlat_je45u")
text = "Back
"

[node name="fullscreen_button" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 303.0
offset_top = 168.0
offset_right = 543.0
offset_bottom = 222.0
theme_override_fonts/font = ExtResource("4_3sgqg")
theme_override_font_sizes/font_size = 45
text = "Fullscreen
"

[connection signal="pressed" from="audio_button" to="." method="_on_audio_button_pressed"]
[connection signal="pressed" from="graphics_button" to="." method="_on_graphics_button_pressed"]
[connection signal="pressed" from="ingame_button" to="." method="_on_ingame_button_pressed"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
[connection signal="toggled" from="fullscreen_button" to="." method="_on_fullscreen_button_toggled"]
